--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<!-- <app-diretiva-ngif></app-diretiva-ngif>   -->
+<!-- <app-diretiva-ngswitch></app-diretiva-ngswitch>   -->
+<!-- <app-diretiva-ngfor></app-diretiva-ngfor>  -->
+<app-diretiva-ngclass></app-diretiva-ngclass>
