--- a/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -11,3 +11,27 @@
 <p [highlight]="'red'" [defaultColor]="'grey'">
   Texto com highlight com cores customizadas.
 </p>
+
+<h5>Diretiva Estrutura Customizada - ngElse</h5>
+
+<div *ngIf="mostrarCursos" >
+  Lista de Cursos aqui.
+</div>
+
+<div *ngElse="mostrarCursos" >
+  Não existem cursos para serem listados.
+</div>
+
+<br>
+<button (click)="onMostrarCursos()">
+  Mostrar ou esconder cursos
+</button>
+<br>
+<template [ngElse]="mostrarCursos">  
+  <div>
+    Não existem cursos para serem listados.
+  </div>
+</template>
+
+
+
